# rainflow

./: .gitattributes  AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  configure  configure.ac  rs-rainflow.c  rs-rainflow.h
doc/: Makefile.am  Makefile.in  package.texi  rs-rainflow.info  rs-rainflow.texi  texinfo.tex  texinfo.tex.diff
matlab/: Makefile.am  Makefile.in  build.m  cc4fat.c  cc4fat.m  ex_rainflow.m
t/: Makefile.am  Makefile.in  ex-basic.c  ex-infinite.c  ex-matrix1-round.c  ex-matrix1.c  ex-rainflow-matrix.c  ex-rainflow.c  ex-read1-short.c  ex-read1.c  ex-read2-short.c  ex-read2.c  ex-reservoir.c  ex.c  ex.h  rf1-merge.csv  rf1-raw.csv  rf1-sort.csv  rv1-merge.csv  rv1-raw.csv  rv1-sort.csv  sig1.csv  t-infinite.sh  t-matrix1.sh  t-rainflow.sh  t-reservoir.sh
